--- a/templates/category/categories.html
+++ b/templates/category/categories.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-{% for catigory in catigories %}
+{% for category in categories %}
      <a href="">
         <p>
-            {{ catigory.name }}
+            {{ category.name }}
         </p>
     </a>
     <br>
