--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -4,13 +4,13 @@
 
 {% for product in products %}
 
-    <div class="card" style="width: 18rem;">
+    <div class="card" style=" width: 18rem;">
         <img src="{{ product.image}}" class="card-img-top" alt="...">
         <div class="card-body">
             <p class="card-title">{{ product.title }} {{ post.rate }}</p>
             <p class="card-text">{{ product.text }}</p>
             <p class="card-text">{{ product.created_at }}</p>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary">View detail</a>
+            <a href="/product/{{ product.id }}/" class="btn btn-primary">View detail</a>
         </div>
     </div>
 {% endfor %}
