--- a/templates/products/detail.html
+++ b/templates/products/detail.html
@@ -1,10 +1,35 @@
+{#{% extends 'Products.html' %}#}
+{#{% load static %}#}
+{##}
+{#{% block content %}#}
+{#    <h1>Product detail</h1>#}
+{#    <h2>{{ product.title }} {{ product.rate }}</h2>#}
+{#    <p>{{ product.content }}</p>#}
+{#    <img src="{{ product.image }}" width="500">#}
+{#    <h2>Dates:</h2>#}
+{#    <p>Created: {{ product.created_at }}</p>#}
+{#    <p>Updated: {{ product.updated_at }}</p>#}
+{#    <h1>Comments:</h1>#}
+{#    {% for comment in product.comments.all %}#}
+{#        <p>{{ comment.text }}</p>#}
+{#    {% endfor %}#}
+{#    <div class='create_comment'>#}
+{#     <form method="post" enctype="multipart/form-data">#}
+{#        {% csrf_token %}#}
+{#        {{ form.as_p }}#}
+{#        <input type="submit" value="create_comment">#}
+{#    </form>#}
+{#    </div>#}
+{#{% endblock %}#}
+
 {% extends 'Products.html' %}
+{% load static %}
 
 {% block content %}
     <h1>Product detail</h1>
     <h2>{{ product.title }} {{ product.rate }}</h2>
     <p>{{ product.content }}</p>
-    <img src="{{ product.image }}" width="500">
+    <img src="/media/{{ product.image }}">  {# Используйте {% static %} для правильной обработки пути к изображению #}
     <h2>Dates:</h2>
     <p>Created: {{ product.created_at }}</p>
     <p>Updated: {{ product.updated_at }}</p>
@@ -13,10 +38,14 @@
         <p>{{ comment.text }}</p>
     {% endfor %}
     <div class='create_comment'>
-     <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="create_comment">
-    </form>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="create_comment">
+        </form>
     </div>
 {% endblock %}
+
+
+
+
