--- a/templates/Products.html
+++ b/templates/Products.html
@@ -10,7 +10,7 @@
     <title>Title</title>
      <style>
         body {
-            background-image: url('{% static "zoro.gif" %}');
+            {#background-image: url('{% static "zoro.gif" %}');#}
             background-size: cover;
             background-position: top;
             background-repeat: no-repeat;
@@ -91,10 +91,10 @@
               {% endif %}
 
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+{#      <form class="d-flex">#}
+{#        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
+{#        <button class="btn btn-outline-success" type="submit">Search</button>#}
+{#      </form>#}
     </div>
   </div>
 </nav>
